<resources>
    <string name="app_name">室内烟雾报警器</string>
    <string name="bluetooth">\t\t蓝牙\n\n Bluetooth</string>
    <string name="internet">\t\t网络\n\n Internet</string>
    <string name="author">author: by Mr.Five</string>
    <string name="about_me">\t\t关于</string>
    <string name="title_name">室内烟雾报警器</string>
    <string name="bottom_home_page">首页</string>
    <string name="bottom_message">消息</string>
    <string name="open_bt">开启蓝牙</string>
    <string name="bonded_devices">查询已配对设备</string>
    <string name="find_devices">发现设备</string>
    <string name="bluetooth_manage">蓝牙管理界面</string>
    <string name="test">仅供测试</string>
    <string name="bt_connect">连接</string>
    <string name="hint">输入一些数据的哇~(默认UTF-8编码)</string>
    <string name="send">发送</string>
    <string name="page">页面描述</string>
    <string name="chat_page">你以后敢评论什么，我想都不敢想</string>
    <string name="chat_page_mqtt">都是可以碰撞的滑梯</string>
    <string name="clear_all">清空</string>
    <string name="receive">接收</string>
    <string name="ip">IP:</string>
    <string name="port">Port:</string>
    <string name="user">User:</string>
    <string name="password">Password:</string>
    <string name="qos">Qos:</string>
    <string name="cleansession">CleanSession:</string>
    <string name="willtopic">WillTopic:</string>
    <string name="willmsg">WillMsg:</string>
    <string name="willqos">WillQos:</string>
    <string name="willretain">WillRetain:</string>
    <string name="connect">connect</string>
    <string name="todo">TODO</string>
    <string name="sub_topic">订阅话题:</string>
    <string name="sub">订阅</string>
    <string name="message">消息:</string>
    <string name="mqtt_config">MQTT连接配置</string>
    <string name="clientid">ClientId:</string>
    <string name="publish">发布</string>
    <string name="topic">话题:</string>
</resources>