<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/messageTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:text="@string/chat_page"/>
        <Button
            android:id="@+id/buttonClearAll"
            android:layout_marginTop="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_bt"
            android:text="@string/clear_all"
            android:textSize="18sp" />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessageBT"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:scrollbarSize="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonReceive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_bt"
            android:textSize="18sp"
            android:text="@string/receive"/>

        <EditText
            android:id="@+id/editTextDataBT"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="5"
            android:hint="@string/hint"
            android:textCursorDrawable="@drawable/cursor_color_bt"
            android:textSize="15sp"
            android:theme="@style/BTEditTextStyle" />

        <Button
            android:id="@+id/buttonSendDataBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_bt"
            android:text="@string/send"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>