<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleMqttName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/mqtt_config"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMqttIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip"
                android:textStyle="bold"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editMqttIP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textCursorDrawable="@drawable/cursor_color_mqtt"
                android:textSize="18sp"
                android:theme="@style/MQTTEditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMqttClientId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clientid"
                android:textStyle="bold"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editMqttClientId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textCursorDrawable="@drawable/cursor_color_mqtt"
                android:textSize="18sp"
                android:theme="@style/MQTTEditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMqttUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textStyle="bold"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editMqttUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textCursorDrawable="@drawable/cursor_color_mqtt"
                android:textSize="18sp"
                android:theme="@style/MQTTEditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMqttPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editMqttPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textCursorDrawable="@drawable/cursor_color_mqtt"
                android:textSize="18sp"
                android:theme="@style/MQTTEditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMqttQos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qos"
                android:textStyle="bold"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editMqttQos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textCursorDrawable="@drawable/cursor_color_mqtt"
                android:textSize="18sp"
                android:theme="@style/MQTTEditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMqttCleanSession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cleansession"
                android:textStyle="bold"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editMqttCleanSession"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textCursorDrawable="@drawable/cursor_color_mqtt"
                android:textSize="18sp"
                android:theme="@style/MQTTEditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMqttWillTopic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/willtopic"
                android:textStyle="bold"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editMqttWillTopic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textCursorDrawable="@drawable/cursor_color_mqtt"
                android:textSize="18sp"
                android:theme="@style/MQTTEditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMqttWillMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/willmsg"
                android:textStyle="bold"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editMqttWillMsg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textCursorDrawable="@drawable/cursor_color_mqtt"
                android:textSize="18sp"
                android:theme="@style/MQTTEditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMqttWillQos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/willqos"
                android:textStyle="bold"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editMqttWillQos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textCursorDrawable="@drawable/cursor_color_mqtt"
                android:textSize="18sp"
                android:theme="@style/MQTTEditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMqttWillRetain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/willretain"
                android:textStyle="bold"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editMqttWillRetain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textCursorDrawable="@drawable/cursor_color_mqtt"
                android:textSize="18sp"
                android:theme="@style/MQTTEditTextStyle" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatButtonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/connect" />
    </FrameLayout>

</LinearLayout>