<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutBT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">
    <!--为了底部导航栏 布局控件使用fragment显示-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarBT"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/cardview_light_background"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/titleBTName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/bluetooth_manage"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonOpenBT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.9"
            android:background="@drawable/button_bt"
            android:drawableStart="@drawable/bluetooth2_icon"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/open_bt"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/buttonFindBondedBT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.9"
            android:background="@drawable/button_bt"
            android:drawableStart="@drawable/paired_icon"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/bonded_devices"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />


        <Button
            android:id="@+id/buttonDiscoveryBT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.9"
            android:background="@drawable/button_bt"
            android:drawableStart="@drawable/search_icon"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/find_devices"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBT"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageViewWaitAnim"
            android:src="@drawable/orange_cat_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</LinearLayout>
